--- a/Input.xaml
+++ b/Input.xaml
@@ -40,6 +40,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <TextBlock
             Grid.Row="0"
@@ -48,9 +49,9 @@
             VerticalAlignment="Center"
             FontFamily="Microsoft YaHei"
             FontWeight="Bold"
-            TextAlignment="Right">
-            干员名称：
-        </TextBlock>
+            Text="干员名称："
+            TextAlignment="Right" />
+
         <TextBox
             x:Name="NameTextBox"
             Grid.Row="0"
@@ -71,9 +72,8 @@
             VerticalAlignment="Center"
             FontFamily="Microsoft YaHei"
             FontWeight="Bold"
-            TextAlignment="Right">
-            稀有度：
-        </TextBlock>
+            Text="稀有度："
+            TextAlignment="Right" />
 
         <materialDesign:RatingBar
             x:Name="StarBar"
@@ -85,6 +85,7 @@
             Min="1"
             ValueChanged="BasicRatingBar_ValueChanged"
             Value="1" />
+
         <TextBlock
             Grid.Row="2"
             Grid.Column="0"
@@ -92,12 +93,69 @@
             VerticalAlignment="Center"
             FontFamily="Microsoft YaHei"
             FontWeight="Bold"
-            TextAlignment="Right">
-            职业：
-        </TextBlock>
+            Text="等级："
+            TextAlignment="Right" />
+        <DockPanel
+            Grid.Row="2"
+            Grid.Column="1"
+            Margin="0,10,10,10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center">
+            <TextBlock
+                VerticalAlignment="Center"
+                DockPanel.Dock="Left"
+                FontFamily="Microsoft YaHei"
+                Foreground="#673ab7"
+                Text="精英" />
+            <TextBox
+                x:Name="EliteTextBox"
+                MinWidth="15"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                materialDesign:HintAssist.Hint="2"
+                Cursor="IBeam"
+                DockPanel.Dock="Left"
+                FontFamily="Microsoft YaHei"
+                KeyDown="EliteTextBox_KeyDown"
+                TextAlignment="Center"
+                TextInput="EliteTextBox_TextInput"
+                TextWrapping="Wrap" />
+            <TextBlock
+                VerticalAlignment="Center"
+                DockPanel.Dock="Left"
+                FontFamily="Microsoft YaHei"
+                Foreground="#673ab7"
+                Text="等级" />
+            <TextBox
+                x:Name="RankTextBox"
+                MinWidth="30"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                materialDesign:HintAssist.Hint="1"
+                Cursor="IBeam"
+                DockPanel.Dock="Left"
+                FontFamily="Microsoft YaHei"
+                TextAlignment="Center"
+                TextWrapping="Wrap" />
+        </DockPanel>
+
+        <TextBlock
+            Grid.Row="3"
+            Grid.Column="0"
+            Margin="0,10,10,10"
+            VerticalAlignment="Center"
+            FontFamily="Microsoft YaHei"
+            FontWeight="Bold"
+            Text="职业："
+            TextAlignment="Right" />
+
         <ComboBox
             x:Name="ComboBox"
-            Grid.Row="2"
+            Grid.Row="3"
             Grid.Column="1"
             Margin="0,10,10,10"
             HorizontalAlignment="Left"
@@ -116,7 +174,7 @@
             <ComboBoxItem Content="特种" FontFamily="Microsoft YaHei" />
         </ComboBox>
         <Button
-            Grid.Row="3"
+            Grid.Row="4"
             Grid.ColumnSpan="2"
             Width="100"
             Margin="0,20,0,20"
@@ -132,7 +190,7 @@
         </Button>
         <materialDesign:Snackbar
             x:Name="SnackbarOne"
-            Grid.Row="4"
+            Grid.Row="5"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
@@ -142,7 +200,7 @@
             Message="列表中已有该干员" />
         <materialDesign:Snackbar
             x:Name="SnackbarTwo"
-            Grid.Row="4"
+            Grid.Row="5"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
@@ -152,7 +210,7 @@
             Message="请选择职阶" />
         <materialDesign:Snackbar
             x:Name="SnackbarThree"
-            Grid.Row="4"
+            Grid.Row="5"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
